feat: complete YOLO11+ByteTrack migration with coordinate fix and presets
- Fixed critical coordinate mapping bug (pixel to normalized space)
- Removed all COCO-SSD legacy controls
- Added preset system (highway-fast, urban-balanced, precision-slow)
- Enhanced ByteTracker with configurable parameters
- Improved track interpolation for smoother visualization
- Dynamic configuration UI with real-time parameter tuning

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@ public/upload/*.mp4
 public/upload/*.gif
 public/upload/*.webm
 
+# Root upload folder
+upload/*.mp4
+upload/*.gif
+upload/*.webm
+
